What-I-Do Section

--- a/images/index.html
+++ b/images/index.html
@@ -59,6 +59,37 @@
     </div>
    </div>
 </section>
+
+<!-- What I Do Section -->
+
+<section class="what-i-do">
+  <h3 class="what-i-do-title">What I do</h3>
+  <p class="what-i-do-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my
+  main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume
+  and project portfolio.</p>
+  <div class="all-my-skils">
+  <div class="my-skills">
+    <img src="icons/js.png" alt="img">
+    <p class="skill-title">Vanila Javascript</p>
+    <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error earum, doloribus quaerat accusantium nesciunt ab?</p>
+  </div>
+  <div class="my-skills">
+    <img src="icons/react.png" alt="img">
+    <p class="skill-title">React</p>
+    <p class="skill-description">Doloremque rem possimus culpa reprehenderit. Mollitia eveniet aut dolorum nobis delectus explicabo exercitationem maiores praesentium!</p>
+  </div>
+  <div class="my-skills">
+    <img src="../images/icons/nodejs.png" alt="img">
+    <p class="skill-title">Node.js</p>
+    <p class="skill-description">Iure commodi ex cum, tempora deserunt hic delectus, eum odio fuga quis earum. Dicta, laborum.</p>
+  </div>
+  <div class="my-skills">
+    <img src="../images/icons/mongo.png" alt="img">
+    <p class="skill-title">MongoDB</p>
+    <p class="skill-description">Aliquid, atque, commodi nam illum culpa accusantium enim impedit cum earum debitis alias iure nobis!</p>
+  </div>
+  </div>
+</section>
   </main>
   <footer>
 
