--- a/images/index.html
+++ b/images/index.html
@@ -90,6 +90,71 @@
   </div>
   </div>
 </section>
+
+<!-- Resume Section -->
+
+<section class="resume-section">
+  <h3 class="summary-of-resume">A summary of My Resume</h3>
+  <div class="experience-and-education-section">
+    <div class="resume-education">
+      <h4 class="education-title">My Education</h4>
+      <div class="hr-title">
+      <h5 class="education-sub-title">Master in Computer Engineering</h5>
+      <p class="eduaction-mini-title">Harvard University / 2015 - 2017</p>
+      <p class="education-discription">List skill/technologies here. You can change the icon above
+      to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+      </div>
+      <hr>
+      <div class="hr-title">
+        <h5 class="education-sub-title">Master in Computer Engineering</h5>
+        <p class="eduaction-mini-title">Harvard University / 2015 - 2017</p>
+        <p>List skill/technologies here. You can change the icon above
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+      </div>
+      <hr>
+      <div class="hr-title">
+        <h5 class="education-sub-title">Master in Computer Engineering</h5>
+        <p class="eduaction-mini-title">Harvard University / 2015 - 2017</p>
+        <p class="education-discription">List skill/technologies here. You can change the icon above
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+      </div>
+      <hr>
+
+    </div>
+    <div class="resume-experience">
+      <h4 class="education-title">My Experience</h4>
+      <div class="hr-title">
+      <h5 class="education-sub-title">Sr. Font End Developer</h5>
+      <p class="eduaction-mini-title">Apple Inc / 2020 - Current</p>
+      <p class="education-discription">List skill/technologies here. You can change the icon above
+      to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+      </div>
+      <hr>
+      <div class="hr-title">
+        <h5 class="education-sub-title">Jr. Font End Developer</h5>
+        <p class="eduaction-mini-title">Dribbble Inc / 2018 - 2022</p>
+        <p class="education-discription">List skill/technologies here. You can change the icon above
+          to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+      </div>
+      <hr>
+      <div class="hr-title">
+        <h5 class="education-sub-title">HTML Developer</h5>
+        <p class="eduaction-mini-title">Adobe Inc / 2017 - 2018</p>
+        <p class="education-discription">List skill/technologies here. You can change the icon above
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+      </div>
+      <hr>
+     
+
+    </div>
+
+  </div>
+      <div class="second-button">
+        <button class="btn-primary">Download</button>
+      </div>
+
+
+</section>
   </main>
   <footer>
 
