--- a/images/index.html
+++ b/images/index.html
@@ -157,6 +157,25 @@
 </section>
   </main>
   <footer>
+    <div class="full-footer">
+    <div class="lets-connect">
+      <h3 class="connect-title">Lets Connect</h3>
+      <p class="connect-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through
+      Friday.</p>
+      <img src="../images/icons/facebook.png" alt="">
+      <img src="../images/icons/twitter.png" alt="">
+      <img src="../images/icons/insta.png" alt="">
+    </div>
+    <div class="form">
+      <h3 class="form-title">Let’s Message me</h3>
+      <form>
+        <input type="text" name="" id="" placeholder="Your Name">
+        <input type="email" name="" id="" placeholder="Your Email">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Massage"></textarea>
+      </form>
+      <button class="btn-primary">Submit</button>
+    </div>
+   </div>
 
   </footer>
 </body>
