--- a/images/index.html
+++ b/images/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/3763358a39.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,7 +27,8 @@
         <h3 class="banner-sub-title">Hi, I am</h3>
         <h1 class="banner-title">Mary Hardy</h1>
         <p class="banner-pragarph">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behave moments.</p>
-        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary"><i class="fa-solid fa-file-arrow-down"></i> Download CV</button>
+        <button class="contact-button"><i class="fa-solid fa-phone"></i> Contact</button>
       </div>
       <img src="../images/hardy.png" alt="">
     </div>
@@ -150,7 +152,7 @@
 
   </div>
       <div class="second-button">
-        <button class="btn-primary">Download</button>
+        <button class="btn-primary"><i class="fa-solid fa-file-arrow-down"></i> Download</button>
       </div>
 
 
